--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "10.2.2",
-        "react": "16.13.1",
-        "react-dom": "16.13.1",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
-        "@material-ui/pickers": "^3.3.10"
+        "@material-ui/pickers": "^3.3.10",
+        "next": "10.2.2",
+        "react": "16.13.1",
+        "react-dom": "16.13.1"
     },
     "devDependencies": {
         "eslint": "7.32.0",
