--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.3.10",
+        "firebase": "^8.8.1",
         "next": "10.2.2",
         "react": "16.13.1",
         "react-dom": "16.13.1"
