--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,12 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.3.10",
-        "firebase": "^8.8.1",
         "axios": "^0.21.1",
+        "firebase": "^8.8.1",
         "next": "10.2.2",
         "react": "16.13.1",
-        "react-dom": "16.13.1"
+        "react-dom": "16.13.1",
+        "react-firebaseui": "^5.0.2"
     },
     "devDependencies": {
         "eslint": "7.32.0",
