--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.11.4",
+        "@material-ui/data-grid": "^4.0.0-alpha.37",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.3.10",
         "axios": "^0.21.1",
