--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
         "react": "16.13.1",
         "react-apexcharts": "^1.3.9",
         "react-dom": "16.13.1",
-        "react-firebaseui": "^5.0.2"
+        "react-firebaseui": "^5.0.2",
+        "react-window": "^1.8.6"
     },
     "devDependencies": {
         "eslint": "7.32.0",
